[project]
name = "ghastoolkit"
version = "0.7.0"
authors = [{ name = "GeekMasher" }]
description = "GitHub Advanced Security Python Toolkit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "certifi==2023.7.22",
    "charset-normalizer==3.2.0",
    "idna==3.4",
    "PyYAML==6.0.1",
    "ratelimit==2.2.1",
    "requests==2.31.0",
    "semantic-version==2.10.0",
    "urllib3==2.0.4",
]

[project.urls]
"Homepage" = "https://github.com/GeekMasher/ghastoolkit"
"Bug Tracker" = "https://github.com/GeekMasher/ghastoolkit/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
